# notepad

./: CMakeLists.txt  Corrector.cpp  Corrector.h  Document.cpp  Document.h  MainWindow.cpp  MainWindow.h  Session.cpp  Session.h  main.cpp  resources.qrc
